--- a/gelato/Base.lproj/Main.storyboard
+++ b/gelato/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="6WN-Ia-gUI">
-    <device id="retina5_5" orientation="portrait">
+    <device id="retina5_9" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -10,22 +10,22 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Main-->
+        <!--Main View Controller-->
         <scene sceneID="J05-c5-gct">
             <objects>
-                <viewController id="3dx-Oi-3wu" userLabel="Main" customClass="ViewController" customModule="gelato" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="3dx-Oi-3wu" userLabel="Main View Controller" customClass="ViewController" customModule="gelato" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="UIX-gD-obe">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mtt-wh-Z2j">
-                                <rect key="frame" x="0.0" y="64" width="414" height="672"/>
+                                <rect key="frame" x="0.0" y="88" width="375" height="690"/>
                                 <subviews>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2Om-DV-S2c" userLabel="Content View">
-                                        <rect key="frame" x="20.333333333333343" y="0.0" width="375" height="1500"/>
+                                    <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2Om-DV-S2c" userLabel="Content View">
+                                        <rect key="frame" x="0.66666666666665719" y="0.0" width="375" height="1500"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TOP PICKS" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oGY-wc-tFs">
-                                                <rect key="frame" x="10" y="15" width="98.666666666666671" height="24"/>
+                                                <rect key="frame" x="10" y="15" width="98.666666666666657" height="24"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
@@ -71,11 +71,10 @@
                                             <constraint firstItem="OwV-Xv-7yR" firstAttribute="leading" secondItem="2Om-DV-S2c" secondAttribute="leading" constant="10" id="PST-wt-qEA"/>
                                             <constraint firstItem="hPv-Ih-d1C" firstAttribute="leading" secondItem="2Om-DV-S2c" secondAttribute="leading" constant="10" id="Q7M-03-9m9"/>
                                             <constraint firstItem="uJt-jc-0Qd" firstAttribute="top" secondItem="2Om-DV-S2c" secondAttribute="top" constant="334" id="Rcy-k9-HuA"/>
+                                            <constraint firstItem="hPv-Ih-d1C" firstAttribute="top" secondItem="2Om-DV-S2c" secondAttribute="top" constant="59" id="SZk-aH-lXQ"/>
                                             <constraint firstItem="rWY-Jk-vSR" firstAttribute="leading" secondItem="2Om-DV-S2c" secondAttribute="leading" constant="10" id="VQt-sz-Rft"/>
-                                            <constraint firstItem="hPv-Ih-d1C" firstAttribute="centerY" secondItem="2Om-DV-S2c" secondAttribute="centerY" constant="-583.5" id="WK5-tS-1qO"/>
                                             <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="rWY-Jk-vSR" secondAttribute="trailing" id="WNW-pP-7IE"/>
                                             <constraint firstAttribute="trailing" secondItem="uJt-jc-0Qd" secondAttribute="trailing" id="XhP-rb-J6U"/>
-                                            <constraint firstItem="hPv-Ih-d1C" firstAttribute="top" secondItem="2Om-DV-S2c" secondAttribute="top" constant="59" id="Y6b-My-bhm"/>
                                             <constraint firstAttribute="trailing" secondItem="2vd-ND-8A6" secondAttribute="trailing" id="YPu-AX-e6p"/>
                                             <constraint firstItem="oGY-wc-tFs" firstAttribute="leading" secondItem="2Om-DV-S2c" secondAttribute="leading" constant="10" id="Zib-uI-AiF"/>
                                             <constraint firstItem="2vd-ND-8A6" firstAttribute="leading" secondItem="2Om-DV-S2c" secondAttribute="leading" constant="10" id="etU-0N-par"/>
@@ -107,20 +106,22 @@
                     <navigationItem key="navigationItem" title="My Location" id="4Gu-LG-lWB">
                         <barButtonItem key="leftBarButtonItem" style="plain" id="mik-vT-Q4C">
                             <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="Jfz-6N-VEx">
-                                <rect key="frame" x="20" y="7" width="46" height="30"/>
+                                <rect key="frame" x="16" y="7" width="46" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Button"/>
                             </button>
                         </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" style="plain" id="hJZ-rQ-qlh">
                             <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="dmt-Nx-WsR">
-                                <rect key="frame" x="348" y="7" width="46" height="30"/>
+                                <rect key="frame" x="313" y="7" width="46" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Button"/>
                             </button>
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="contentHeightConstraint" destination="9LV-FR-bs8" id="ucx-eQ-gKQ"/>
+                        <outlet property="contentView" destination="2Om-DV-S2c" id="rMH-B5-Vv4"/>
                         <outlet property="titleItem" destination="4Gu-LG-lWB" id="3pD-19-i2z"/>
                     </connections>
                 </viewController>
@@ -128,12 +129,27 @@
             </objects>
             <point key="canvasLocation" x="2226.4000000000001" y="263.05418719211826"/>
         </scene>
+        <!--Search View Controller-->
+        <scene sceneID="VHK-DV-t2O">
+            <objects>
+                <viewController id="66B-GI-Ttj" userLabel="Search View Controller" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Qoj-es-AKd">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <viewLayoutGuide key="safeArea" id="s3E-FI-Omb"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="YxO-O8-SaI" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2226" y="1005"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="qA2-2B-60U">
             <objects>
                 <navigationController id="6WN-Ia-gUI" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="VuD-Je-ZP6">
-                        <rect key="frame" x="0.0" y="20" width="414" height="44"/>
+                        <rect key="frame" x="0.0" y="44" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
